aligned site on media query, fixed transition issue in signup section

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,8 +46,10 @@ header {
 }
 
 .signup {
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   font-size: .9em;
   font-family: 'Quicksand', sans-serif;
@@ -198,7 +200,7 @@ label {
 }
 
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
 
 h1 {
   font-size: .5em;
@@ -223,13 +225,29 @@ width: 60%;
   width: 59.5%;
 }
 
-.contact-group {
+/* .divider3 {
   width: 60%;
-padding-left: 25%;
+} */
+
+.contact-group, .newsletter-group {
+  width:60%;
+padding-left: 20%;
 }
 
 hr {
-  width: 60%;
+  width: 100%;
+}
+
+.signup p {
+  font-size: .7em;
+}
+
+input[type="submit"] {
+height: 50px;
+  font-size: 1em;
+}
+legend {
+  margin-top: 20px;
 }
 
 }
